feat: initial support for `processors`
feat: support for `processors` maven block
feat: assemble and include processor classpath
feat: greatest-common-ancestor for `--source-path`

Signed-off-by: Sam Gammon <sam@elide.dev>